# ANO

./: .env.exemple  .gitignore  README.md  pyproject.toml  sia.toml  sia.toml.exemple
sia/: __init__.py  api.py  categorizer.py  cli.py  config.py  llm_client.py  taxonomy.py
sia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
